# speach-to-text-tool

./: .gitignore  LICENSE  PLAN.md  README.md  RESEARCH.md  pyproject.toml
stt/: app.py
